--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="header-bar">
-  <h1>*Park June Hompage</h1>
+  <h1>Park June</h1>
   <h2>SKKU Student</h2>
   <br/>
   <hr>
