--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-bar">
   <h1>Where's Oakland's Shoreline?</h1>
-  <h2>Visualizing Community Access</h2>
+  <h2>Visualizing Community Access, a Shoreline's Process and Experience</h2>
   <br/>
   <hr>
   <br/>
